--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -15,7 +15,7 @@ $gray-border: darken(grayscale(7), 8);
 
   color: grayscale(white);
   text-transform: uppercase;
-  font-size: rem(15);
+  font-size: rem(12);
   font-family: $gotham-regular;
   font-weight: 500;
   letter-spacing: 0.04em;
