--- a/src/assets/scss/components/_panel.scss
+++ b/src/assets/scss/components/_panel.scss
@@ -3,6 +3,7 @@
   margin-bottom: rem(18);
 
   border-bottom: 1px solid grayscale(9);
+  text-align: left;
 
   &__heading, &__body, &__footer {
     position: relative;
