--- a/src/assets/scss/foundation/_typography.scss
+++ b/src/assets/scss/foundation/_typography.scss
@@ -1,6 +1,3 @@
-$gotham-narrow: 'Gotham Narrow SSm A', 'Gotham Narrow SSm B', sans-serif;
-$gotham-regular: 'Gotham SSm A', 'Gotham SSm B', sans-serif;
-
 html {
   color: grayscale(medium);
   font-size: $baseline + 0px;
