--- a/src/assets/scss/shared/_config.scss
+++ b/src/assets/scss/shared/_config.scss
@@ -89,3 +89,6 @@ $shadows: (
 
 $nav-width: 6rem;
 $secondary-nav-width: 10rem;
+
+$gotham-narrow: 'Gotham Narrow SSm A', 'Gotham Narrow SSm B', sans-serif;
+$gotham-regular: 'Gotham SSm A', 'Gotham SSm B', sans-serif;
